picture showcase changes

--- a/HTML Crash Course/scripts/Acme Web Design Website Tutorial/css/style.css
+++ b/HTML Crash Course/scripts/Acme Web Design Website Tutorial/css/style.css
@@ -85,7 +85,8 @@ header a:hover{
 
 #showcase{
     min-height: 400px;
-    background:url('../images/background.jpg') no-repeat;
+    background:url('../images/background.jpg') no-repeat center;
+    background-size: cover;
     text-align: center;
     color: white;
 }
@@ -104,6 +105,7 @@ header a:hover{
     padding: 15px;
     color: #ffffff;
     background: #35424a;
+    text-align: center;
 
 }
 
