--- a/Responsive Website Project/css/style.css
+++ b/Responsive Website Project/css/style.css
@@ -64,6 +64,7 @@ body{
     margin-left: 35px;
 }
 
+
 .socials{
     height: 10px;
     width: 10px;
@@ -111,12 +112,12 @@ body{
     display:flex;
     list-style-type: none;
     justify-content: space-around;
+    align-items: center;
 
 }
-#boxes ul li img{
+#boxes img{
     margin: auto;
-    height: 450px;
-    width: 450px;
+    width: 90%;
 }
 
 #location{
@@ -138,11 +139,15 @@ body{
 }
 
 
+
+
+
 footer, footer a{
     margin-top: 0;
     color: #fff;
     background-color: #362417;
     text-decoration: none;
+    margin-bottom: 0;
 }
 
 footer a:hover{
@@ -150,8 +155,146 @@ footer a:hover{
 }
 
 footer h4{
-    padding-top: 1em;
+    padding-top:1em;
+    margin-top: 0;
 }
 footer p{
     font-size: 10px;
+    margin-bottom:0;
+    padding-bottom: 1em;
 }
+
+@media (max-width: 800px) {
+
+
+    #boxes ul{
+        flex-direction: column;
+        justify-content: center;
+    }
+
+    #boxes img{
+        width: 80%;
+    }
+
+    #location ul{
+        flex-direction: column;
+    }
+}
+
+.reserve{
+    max-width: 960px;
+    margin: auto;
+    padding: 10px;
+    display: flex;
+    justify-content: center;
+    text-align: left;
+}
+
+.form{
+    width: 450px;    
+    margin: 0;
+    background-color: #F1DABF;
+    padding: 2em;
+}
+label {
+    display: block;
+    width: 150px;
+    float: left;
+}
+
+
+.hours-open{
+    padding: 2em;
+    background-color: #362417;
+    color: white;
+    width: 30%;
+    font-family: futura-pt, sans-serif;
+    font-weight: bold;
+
+}
+.hours-open ul{
+    text-decoration: none;
+    list-style-type: none; 
+    padding-left: 1em; 
+}
+
+.button{
+    display: inline-block;
+    background-color: #92817A;
+    color: #fff;
+    text-decoration: none;
+    padding: 5px 10px;
+    border: none;
+    border-radius: 3px;
+    margin-top: 1em;
+    width: 7em
+}
+
+input{
+    background-color: white;
+    border-radius: 7px;
+    height: 25px;
+    font-family: futura-pt, sans-serif;
+    font-weight: bold;
+}
+
+
+
+.button:hover{
+    background-color: black;
+}
+
+.vertical{
+    display: flex;
+    flex-direction: column;
+}
+
+
+
+
+/* gallery */
+.container-gallery{
+    max-width: 960px;
+    margin: auto;
+    padding: 10px;
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+   /* grid-auto-rows: minmax(200px, auto);*/
+   gap: 10px;
+   height: 100vh;
+   
+}
+
+.container-gallery img{
+    width: 100%;
+    content: fill;
+}
+
+.image-gallery:nth-of-type(2){
+    grid-column: 2/4;
+    grid-row: 1/3;
+}
+
+.image-gallery:nth-of-type(2){
+    grid-column: 2/4;
+    grid-row: 1/3;
+}
+
+.image-gallery:nth-of-type(7){
+    grid-column: 1/3;
+    grid-row: 4/6;
+}
+
+.image-gallery:nth-of-type(11){
+    grid-column: 2/4;
+    grid-row: 6/8;
+}
+
+.reserve img{
+    width: 45%;
+}
+
+
+
+
+
