--- a/Responsive Website Project/tessting stuff/test.css
+++ b/Responsive Website Project/tessting stuff/test.css
@@ -1,150 +1,168 @@
-@import url("https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
-
-* {
+*{
+  font-family:Arial, Helvetica, sans-serif;
   margin: 0;
   padding: 0;
-  box-sizing: border-box;
+  box-sizing:border-box
 }
 
-body {
-  font-family: "Poppins", sans-serif;
+body{
+  background: yellow;
+
 }
 
-.container {
-  max-width: 1050px;
-  width: 90%;
-  margin: auto;
-}
 
-.navbar {
+
+
+
+
+.header{
+  position: relative;
   width: 100%;
-  box-shadow: 0 1px 4px rgb(146 161 176 / 15%);
-}
-
-.nav-container {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  height: 62px;
+  background: blue;
+  padding: 0 25px;
+  transition: 0.3s;
 }
 
-.navbar .menu-items {
+.logo a{
+  display: block;
+}
+
+.logo a img{
+  display: block;
+  width: 100%;
+}
+
+.navigation{
   display: flex;
-}
-
-.navbar .nav-container li {
-  list-style: none;
-}
-
-.navbar .nav-container a {
-  text-decoration: none;
-  color: #0e2431;
-  font-weight: 500;
-  font-size: 1.2rem;
-  padding: 0.7rem;
-}
-
-.navbar .nav-container a:hover{
-    font-weight: bolder;
-}
-
-.nav-container {
-  display: block;
-  position: relative;
-  height: 60px;
-}
-
-.nav-container .checkbox {
-  position: absolute;
-  display: block;
-  height: 32px;
-  width: 32px;
-  top: 20px;
-  left: 20px;
-  z-index: 5;
-  opacity: 0;
-  cursor: pointer;
-}
-
-.nav-container .hamburger-lines {
-  display: block;
-  height: 26px;
-  width: 32px;
-  position: absolute;
-  top: 17px;
-  left: 20px;
-  z-index: 2;
-  display: flex;
-  flex-direction: column;
   justify-content: space-between;
+   align-items: center;
 }
 
-.nav-container .hamburger-lines .line {
-  display: block;
-  height: 4px;
-  width: 100%;
-  border-radius: 10px;
-  background: #0e2431;
-}
-
-.nav-container .hamburger-lines .line1 {
-  transform-origin: 0% 0%;
-  transition: transform 0.4s ease-in-out;
-}
-
-.nav-container .hamburger-lines .line2 {
-  transition: transform 0.2s ease-in-out;
-}
-
-.nav-container .hamburger-lines .line3 {
-  transform-origin: 0% 100%;
-  transition: transform 0.4s ease-in-out;
-}
-
-.navbar .menu-items {
-  padding-top: 120px;
-  box-shadow: inset 0 0 2000px rgba(255, 255, 255, .5);
-  height: 100vh;
-  width: 100%;
-  transform: translate(-150%);
+.menu{
   display: flex;
-  flex-direction: column;
-  margin-left: -40px;
-  padding-left: 50px;
-  transition: transform 0.5s ease-in-out;
-  text-align: center;
+  justify-content: center;
+  flex-direction: row;
+  align-items: center;
+  z-index: 1;
+  transition: 0.5s;
 }
 
-.navbar .menu-items li {
-  margin-bottom: 1.2rem;
-  font-size: 1.5rem;
-  font-weight: 500;
+.menu li{
+  list-style-type: none;
 }
 
-.logo {
+.menu li a{
+  color: white;
+  text-decoration: none;
+  display: block;
+  padding: 40px 25px;
+  font-size: 18px;
+  line-height: 1;
+  transition: 0.3s;
+}
+
+.hamburger{ /* center line*/
+  position: relative;
+  width: 30px;
+  height: 4px;
+  background: white;
+  border-radius: 10px;
+  cursor: pointer;
+  z-index: 2;
+  transition: 0.3s;
+}
+
+.hamburger:before,
+.hamburger:after{
+  content: "";
   position: absolute;
-  top: 5px;
-  right: 15px;
-  font-size: 1.2rem;
-  color: #0e2431;
+  height: 4px;
+  right: 0;
+  background: white;
+  border-radius: 10px;
+  transition: 0.3s;
 }
 
-.nav-container input[type="checkbox"]:checked ~ .menu-items {
-  transform: translateX(0);
+.hamburger:before{ /*creates line  above center line*/
+  top: -10px;
+  width: 20px;
 }
 
-.nav-container input[type="checkbox"]:checked ~ .hamburger-lines .line1 {
-  transform: rotate(45deg);
+.hamburger:after{ /*creates line  below center line*/
+  top: 10px;
+  width: 25px;
 }
 
-.nav-container input[type="checkbox"]:checked ~ .hamburger-lines .line2 {
-  transform: scaleY(0);
+.toggle-menu{
+  position: absolute;
+  width: 30px;
+  height: 100%;
+  z-index: 3;
+  cursor: pointer;
+  opacity: 0;
 }
 
-.nav-container input[type="checkbox"]:checked ~ .hamburger-lines .line3 {
+.hamburger,
+.toggle-menu{
+  display:none;
+}
+
+.navigation input:checked ~ .hamburger{ /*when the checkbox is checked make the line dissapear*/
+  background: transparent;
+}
+
+.navigation input:checked ~ .hamburger:before{ /*when it is checked top line will rotate -45 degrees*/
+  top:0;
   transform: rotate(-45deg);
+  width:30px;
 }
 
-.nav-container input[type="checkbox"]:checked ~ .logo{
-  display: none;
+.navigation input:checked ~ .hamburger:after{ /*when it is checked bottom line will rotate 45 degrees*/
+  top:0;
+  transform: rotate(45deg);
+  width:30px;
+}
+
+.navigation input:checked ~.menu{
+  right: 0;
+  box-shadow: -20px 0 40px white;
+}
+
+@media screen and (max-width: 992px){
+
+  .header{
+    padding: 10px 20px;
+  }
+  .hamburger,
+  .toggle-menu{
+    display:block;
+  }
+
+  .menu{
+    justify-content: start;
+    flex-direction: column;
+    align-items: center;
+    position: fixed;
+    top:0;
+    right: -300px;
+    background: blue;
+    width: 300px;
+    height: 100%;
+    padding-top: 65px;
+  }
+
+  .menu li{
+    width: 100%;
+  }
+
+  .menu li a,
+  .menu li a:hover{
+      padding: 30px;
+      font-size: 24px;
+      box-shadow: 0 1px 0 white;
+      
+  }
 }
