--- a/Responsive Website Project/css/style.css
+++ b/Responsive Website Project/css/style.css
@@ -1,100 +1,114 @@
 /* Styles for the whole website*/
 @import url('http://fonts.cdnfonts.com/css/brandon-grotesque-regular');
 
-html { /* no scrolling horizontally*/
+html {
+    /* no scrolling horizontally*/
     max-width: 100%;
     overflow-x: hidden;
 }
 
-body{
+body {
     margin: 0;
     font-family: 'Brandon Grotesque Regular', sans-serif;
-    font-style:normal;  
+    font-style: normal;
     background: #fffbff;
     text-align: center;
 }
 
 /* Navbar, hamburger menu tutorial https://www.youtube.com/watch?v=XM7sEpl0f7c */
-.navbar a{
+.navbar a {
     color: #000000;
     text-decoration: none;
     font-size: 20px;
     font-weight: 100;
-}  
+}
 
 
 /* special underline hover effect thing from https://www.youtube.com/watch?v=Kz96odltLQI*/
 
-.underline-hover-effect{
-    display: inline-block; /*makes it an inline element but can have height and width*/
-    padding-bottom: 2px; /*how much space between underline and text*/
+.underline-hover-effect {
+    display: inline-block;
+    /*makes it an inline element but can have height and width*/
+    padding-bottom: 2px;
+    /*how much space between underline and text*/
     position: relative;
 }
 
-.underline-hover-effect::before{ /*before it is hovered*/
-    content:"";
-    position: absolute; 
-    left:0; /*makes it start at left*/
-    bottom:0; /*makes the underline on the bottom*/
-    width:0%; /*how much of the underline you start with*/
-    height: 2px; /*height of the underline*/
+.underline-hover-effect::before {
+    /*before it is hovered*/
+    content: "";
+    position: absolute;
+    left: 0;
+    /*makes it start at left*/
+    bottom: 0;
+    /*makes the underline on the bottom*/
+    width: 0%;
+    /*how much of the underline you start with*/
+    height: 2px;
+    /*height of the underline*/
     background-color: black;
-    transition: width 0.25s ease-out; /*makes the transition smooth and occur in 0.25 seconds*/
+    transition: width 0.25s ease-out;
+    /*makes the transition smooth and occur in 0.25 seconds*/
 
 }
 
-.underline-hover-effect:hover::before{ /*when its hovered*/
-    width: 100%; /*how much of the underline you see*/
+.underline-hover-effect:hover::before {
+    /*when its hovered*/
+    width: 100%;
+    /*how much of the underline you see*/
 }
 
 
 
-  .navbar{
-    position: relative; /*changes the position to make it relative to its parent*/
-    width: 100%; 
+.navbar {
+    position: relative;
+    /*changes the position to make it relative to its parent*/
+    width: 100%;
     display: flex;
     justify-content: space-between;
     align-items: center;
     background-color: #92817A;
     padding: 0 25px;
-    transition: 0.3s; /*controls animation speed when the thing is changing*/
+    transition: 0.3s;
+    /*controls animation speed when the thing is changing*/
     height: 50;
-  }
-  
+}
 
 
-  .logo a{
+
+.logo a {
     display: block;
-  }
-  
-  .logo a img{
+}
+
+.logo a img {
     display: block;
     width: 100%;
-  }
-  
-  .navbar .container{
+}
+
+.navbar .container {
     margin-right: 5%;
     display: flex;
     justify-content: space-between;
     align-items: center;
     height: 90%;
-  }
-  
+}
 
-  .menu{
+
+.menu {
     display: flex;
     justify-content: center;
     flex-direction: row;
     align-items: center;
-    z-index: 1; /*what order the elements stack in*/
+    z-index: 1;
+    /*what order the elements stack in*/
     transition: 0.5s;
-  }
-  
-  .menu li{
+}
+
+.menu li {
     list-style-type: none;
-  }
-  
-  .menu li a{
+}
+
+.menu li a {
     color: #000;
     text-decoration: none;
     display: block;
@@ -102,9 +116,10 @@ body{
     font-size: 20px;
     line-height: 1;
     transition: 0.3s;
-  }
-  
-  .hamburger{ /* center line*/
+}
+
+.hamburger {
+    /* center line*/
     position: relative;
     width: 30px;
     height: 4px;
@@ -113,10 +128,11 @@ body{
     cursor: pointer;
     z-index: 2;
     transition: 0.3s;
-  }
-  
-  .hamburger:before,
-  .hamburger:after{ /*top and bottom line*/
+}
+
+.hamburger:before,
+.hamburger:after {
+    /*top and bottom line*/
     content: "";
     position: absolute;
     height: 4px;
@@ -124,91 +140,103 @@ body{
     background: black;
     border-radius: 10px;
     transition: 0.3s;
-  }
-  
-  .hamburger:before{ /*creates line  above center line*/
+}
+
+.hamburger:before {
+    /*creates line  above center line*/
     top: -10px;
     width: 20px;
-  }
-  
-  .hamburger:after{ /*creates line below center line*/
+}
+
+.hamburger:after {
+    /*creates line below center line*/
     top: 10px;
     width: 25px;
-  }
-  
-  .toggle-menu{ /* basically the hamburger is a checkbox that you can't see under the lines*/
+}
+
+.toggle-menu {
+    /* basically the hamburger is a checkbox that you can't see under the lines*/
     position: absolute;
     width: 30px;
     height: 100%;
     z-index: 3;
     cursor: pointer;
-    opacity: 0; /*cant see the checkbox*/
-  }
-  
-  .hamburger,
-  .toggle-menu{ /*makes you not see the hamburger unless on the specified media query*/
-    display:none;
-  }
-  
-  .container input:checked ~ .hamburger{ /*when the checkbox is checked make the line disapear*/
+    opacity: 0;
+    /*cant see the checkbox*/
+}
+
+.hamburger,
+.toggle-menu {
+    /*makes you not see the hamburger unless on the specified media query*/
+    display: none;
+}
+
+.container input:checked~.hamburger {
+    /*when the checkbox is checked make the line disapear*/
     background: transparent;
-  }
-  
-  .container input:checked ~ .hamburger:before{ /*when it is checked top line will rotate -45 degrees*/
-    top:0;
+}
+
+.container input:checked~.hamburger:before {
+    /*when it is checked top line will rotate -45 degrees*/
+    top: 0;
     transform: rotate(-45deg);
-    width:30px;
-  }
-  
-  .container input:checked ~ .hamburger:after{ /*when it is checked bottom line will rotate 45 degrees*/
-    top:0;
+    width: 30px;
+}
+
+.container input:checked~.hamburger:after {
+    /*when it is checked bottom line will rotate 45 degrees*/
+    top: 0;
     transform: rotate(45deg);
-    width:30px;
-  }
-  
-  .container input:checked ~.menu{ /*when it is checked it doesn't push the navbar away anymore (Right is different from margin right, because in margin you are moving the element itself but when you use "right" it pushes other things away*/
+    width: 30px;
+}
+
+.container input:checked~.menu {
+    /*when it is checked it doesn't push the navbar away anymore (Right is different from margin right, because in margin you are moving the element itself but when you use "right" it pushes other things away*/
     right: 0;
-  }
-  
-  @media screen and (max-width: 992px){ /*makes the hamburger appear when the screen is smaller then 992px*/
-  
-    .navbar{
-      padding: 10px 20px;
+}
+
+@media screen and (max-width: 992px) {
+    /*makes the hamburger appear when the screen is smaller then 992px*/
+
+    .navbar {
+        padding: 10px 20px;
     }
+
     .hamburger,
-    .toggle-menu{
-      display:block;
+    .toggle-menu {
+        display: block;
     }
-  
-    .menu{ /*makes the navbar menu go vertically and when it is not checked it pushes it to the right*/
-      justify-content: start;
-      flex-direction: column;
-      align-items: center;
-      position: fixed;
-      top:0;
-      right: -400px;
-      background: #92817A;
-      width: 300px;
-      height: 100%;
-      padding-top: 65px;
-      padding-left: 0;
+
+    .menu {
+        /*makes the navbar menu go vertically and when it is not checked it pushes it to the right*/
+        justify-content: start;
+        flex-direction: column;
+        align-items: center;
+        position: fixed;
+        top: 0;
+        right: -400px;
+        background: #92817A;
+        width: 300px;
+        height: 100%;
+        padding-top: 65px;
+        padding-left: 0;
     }
-  
-    .menu li{
-      width: 100%;
+
+    .menu li {
+        width: 100%;
     }
-  
+
     .menu li a,
-    .menu li a:hover{
+    .menu li a:hover {
         padding: 30px;
         font-size: 24px;
         box-shadow: 0 1px 0 white;
-        
+
     }
-  }
+}
 
 /*header / showcase */
-#header{
+#header {
     display: flex;
     height: 200px;
     justify-content: center;
@@ -223,7 +251,7 @@ body{
     opacity: 0.4;
 }
 
-#showcase{
+#showcase {
     display: flex;
     height: 500px;
     color: #000000;
@@ -233,7 +261,7 @@ body{
     margin-bottom: 0;
 }
 
-#showcase .background-image{
+#showcase .background-image {
     position: absolute;
     background: url(../images/carbonara.png);
     background-position: center;
@@ -246,7 +274,8 @@ body{
 }
 
 /*footer*/
-footer, footer a{
+footer,
+footer a {
     margin-top: 0;
     color: #fff;
     background-color: #362417;
@@ -254,32 +283,34 @@ footer, footer a{
     margin-bottom: 0;
 }
 
-footer a:hover{
+footer a:hover {
     color: lightgrey;
 }
 
-footer h4{
-    padding-top:1em;
+footer h4 {
+    padding-top: 1em;
     margin-top: 0;
 }
-footer p{
+
+footer p {
     font-size: 10px;
-    margin-bottom:0;
+    margin-bottom: 0;
     padding-bottom: 1em;
 }
- 
+
 
 /*HOME PAGE*/
 /*boxes*/
-#boxes ul{
+#boxes ul {
     margin-top: 50px;
-    display:flex;
+    display: flex;
     list-style-type: none;
     justify-content: space-around;
     align-items: center;
 
 }
-#boxes img{
+
+#boxes img {
     margin: auto;
     width: 90%;
 }
@@ -288,16 +319,18 @@ footer p{
 @media (max-width: 800px) {
 
 
-    #boxes ul{ /*makes the boxes go vertically*/
+    #boxes ul {
+        /*makes the boxes go vertically*/
         flex-direction: column;
         justify-content: center;
     }
 
-    #boxes img{
+    #boxes img {
         width: 80%;
     }
 
-    #location ul{ /*makes the boxes go vertically*/
+    #location ul {
+        /*makes the boxes go vertically*/
         flex-direction: column;
     }
 }
@@ -305,12 +338,13 @@ footer p{
 
 /*location area + map*/
 
-#location{
+#location {
     margin-top: 50px;
     background-color: #F1DABF;
     margin-bottom: 0;
 }
-#location ul{
+
+#location ul {
     display: flex;
     justify-content: center;
     margin: auto;
@@ -324,7 +358,7 @@ footer p{
 }
 
 /* MAKE A RESERVATION PAGE*/
-.reserve{
+.reserve {
     max-width: 960px;
     margin: auto;
     padding: 10px;
@@ -334,8 +368,8 @@ footer p{
 }
 
 /* styles the forms*/
-.form{
-    width: 450px;    
+.form {
+    width: 450px;
     margin: 0;
     background-color: #F1DABF;
     padding: 2em;
@@ -347,7 +381,7 @@ label {
     float: left;
 }
 
-.hours-open{
+.hours-open {
     padding: 2em;
     background-color: #362417;
     color: white;
@@ -357,13 +391,13 @@ label {
 
 }
 
-.hours-open ul{
+.hours-open ul {
     text-decoration: none;
-    list-style-type: none; 
-    padding-left: 1em; 
+    list-style-type: none;
+    padding-left: 1em;
 }
 
-.button{
+.button {
     display: inline-block;
     background-color: #92817A;
     color: #fff;
@@ -375,11 +409,11 @@ label {
     width: 7em
 }
 
-.button:hover{
+.button:hover {
     background-color: black;
 }
 
-input{
+input {
     background-color: white;
     border-radius: 7px;
     height: 25px;
@@ -388,51 +422,54 @@ input{
 }
 
 /*makes the label be displayed above the form*/
-.vertical{
+.vertical {
     display: flex;
     flex-direction: column;
 }
 
-.reserve img{
+.reserve img {
     width: 45%;
 }
 
 /* GALLERY PAGE*/
 
-.container-gallery{
+/*makes the gallery into a grid*/
+.container-gallery {
     max-width: 960px;
     margin: auto;
     padding: 10px;
     display: grid;
     grid-template-columns: repeat(3, 1fr);
-   /* grid-auto-rows: minmax(200px, auto);*/
-   gap: 10px;
-   height: 100vh;
-   overflow-y:scroll;
-   
+    gap: 10px;
+    height: 100vh;
+    overflow-y: scroll;
+    /*makes the extra grid that doesn't fit on the page to be scrollable*/
+
 }
 
-.container-gallery img{
+/*the images fill up the grid boxes*/
+.container-gallery img {
     width: 100%;
     content: fill;
 }
 
-.image-gallery:nth-of-type(2){
+/*sizes the different boxes*/
+.image-gallery:nth-of-type(2) {
     grid-column: 2/4;
     grid-row: 1/3;
 }
 
-.image-gallery:nth-of-type(2){
+.image-gallery:nth-of-type(2) {
     grid-column: 2/4;
     grid-row: 1/3;
 }
 
-.image-gallery:nth-of-type(7){
+.image-gallery:nth-of-type(7) {
     grid-column: 1/3;
     grid-row: 4/6;
 }
 
-.image-gallery:nth-of-type(11){
+.image-gallery:nth-of-type(11) {
     grid-column: 2/4;
     grid-row: 6/8;
 }
@@ -440,9 +477,9 @@ input{
 
 /* ABOUT US*/
 
-.half-page{
-
-    display:grid;
+.half-page {
+    /*makes the page into the grid so it splits it up with one being the image and the other side being the about us*/
+    display: grid;
     height: 100vh;
     width: 100vw;
     padding: 5px;
@@ -450,91 +487,70 @@ input{
     gap: 0px;
 }
 
-.about-us:nth-of-type(1){
+/*about us side styling*/
+.about-us:nth-of-type(1) {
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    padding: 2%;
+    padding: 0 2% 0 2%;
     height: 650px;
     background-color: #F1DABF;
 }
 
-.about-us:nth-of-type(2){
+/*picture side styling*/
+.about-us:nth-of-type(2) {
     background: url(../images/shells.png);
-    background-repeat: no-repeat;
-    height: 650px ;
+    height: 650px;
     background-size: cover;
 }
 
-/*MENU*/
-
-/*
-body{
-    
-    font-family: 'Open Sans', sans-serif;
-    font-size: 16px;
-    line-height: 1.5;
-    color: black;
-    background: #f5f5f5;
-}
-*/
-
-
-
-.menu-sections{
+/*MENU PAGE*/
+.menu-sections {
+    /*makes the menu a grid separated by sections*/
+    font-family: futura-pt, sans-serif;
     max-width: 960px;
     margin: auto;
     padding: 5px;
     display: grid;
     grid-template-columns: repeat(3, 1fr);
-   /* grid-auto-rows: minmax(200px, auto);*/
     gap: 0px;
     height: 100vh;
     margin-bottom: 22.5%;
-    font-family: futura-pt, sans-serif;
-    
 }
 
-#crying ul{
-    list-style:none;
-}
-
-.item{
+.item {
+    /*styles each menu section*/
     background-color: #ecdcd4;
-    color: white;
+    color: black;
     font-size: 20px;
     padding: 20px;
     border-bottom: solid 1px black;
     grid-column: 1-3;
 
-} 
+}
 
-.menu-sections .item:nth-of-type(1), .menu-sections .item:nth-of-type(2){
+.menu-sections .item:nth-of-type(1),
+.menu-sections .item:nth-of-type(2) {
+    /*makes these sections take up the whole grid*/
     grid-column: 1/4;
 }
-.menu-sections .item:nth-of-type(3){
+
+.menu-sections .item:nth-of-type(3) {
+    /*makes it take up 2/3s of the grid*/
     grid-column: 1/3;
     border-right: solid 1px black;
 }
 
 
 .alignleft {
-	float: left;
+    /*allows the menu item names to be aligned left*/
+    float: left;
     font-size: 20px;
 }
+
 .alignright {
-	float: right;
+    /*allows the menu item prices to be alinged right*/
+    float: right;
     font-size: 20px;
 }
-
-
-
-
-
-
-
-/* gallery */
-
-
-
