--- a/Responsive Website Project/css/style.css
+++ b/Responsive Website Project/css/style.css
@@ -32,7 +32,7 @@ body {
     font-weight: 100;
 }
 .navbar .container {
-    margin-right: 5%;
+    margin-right: 15px;
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -70,12 +70,14 @@ body {
     /*how much of the underline you see*/
 }
 
-.logo a {
-    display: block;
+.logo {
+    display: inline;
+    width: fit-content;
 }
-.logo a img {
-    display: block;
-    width: 100%;
+.logo img {
+    display: inline;
+    float: left;
+    width: 120px;
 }
 
 .menu {
@@ -96,10 +98,12 @@ body {
     color: #000;
     text-decoration: none;
     display: block;
+    margin-right: 15px;
     padding: 5px 25px 5px 25px;
     font-size: 20px;
     line-height: 1;
     transition: 0.3s;
+    white-space: nowrap;
 }
 
 .hamburger {
@@ -181,13 +185,18 @@ body {
 
 
 /*footer*/
-footer,
-footer a {
+footer{
+    padding-top: 30px;
     margin-top: 0;
     color: #fff;
     background-color: #362417;
     text-decoration: none;
     margin-bottom: 0;
+}
+
+footer a{
+    color: #fff;
+    text-decoration: none;
 }
 
 footer a:hover {
@@ -205,6 +214,10 @@ footer p {
     padding-bottom: 1em;
 }
 
+footer img{
+    width: 150px;
+}
+
 
 /*HOME PAGE*/
 /*header / showcase (for main page only) */
@@ -216,6 +229,10 @@ footer p {
     justify-content: center;
     align-items: center;
     margin-bottom: 0;
+}
+
+#showcase img{
+    width: 40%;
 }
 
 /*determines how the background of the showcase area is going to look*/
@@ -233,6 +250,7 @@ footer p {
 
 /*boxes*/
 #boxes ul {
+    padding: 0 20px 0 20px;
     margin-top: 50px;
     display: flex;
     list-style-type: none;
@@ -526,6 +544,7 @@ input {
         /*makes the boxes go vertically*/
         flex-direction: column;
         justify-content: center;
+        padding: 0;
     }
 
     #boxes img {
@@ -545,5 +564,54 @@ input {
     }
     .smallmap{
         display: contents;
+    }
+}
+
+/*MENU PAGE MEDIA QUERY*/
+@media (max-width: 551px){
+    .menu-sections .item:nth-of-type(3) {
+        /*makes it take up all of the grid*/
+        grid-column: 1/4;
+        border-right: solid 1px black;
+    }
+    .menu-sections .item:nth-of-type(4) {
+        /*makes it take up all of the grid*/
+        grid-column: 1/4;
+        border-right: solid 1px black;
+    }
+    
+}
+/* RESERVE PAGE MEDIA QUERY*/
+@media (max-width: 500px){
+    /*makes everything stack vertically*/ 
+    .reserve{
+        flex-direction: column;
+    }
+    .hours-open{
+        padding-right: 0;
+        padding-left: 0;
+        width: 100%;
+        text-align: center;
+    }
+    .form{
+        padding-right: 0;
+        padding-left: 0;
+        width: 100%;
+    }
+    .reserve img{
+        padding-right: 0;
+        padding-left: 0;
+        width: 100%;
+    }
+}
+
+/* ABOUT US MEDIA QUERY*/
+
+@media (max-width: 700px){
+    .about-us:nth-of-type(1){
+        grid-column: 1/3;
+    }
+    .about-us:nth-of-type(2){
+        grid-column: 1/3;
     }
 }
