--- a/Introduction to Javascript/SportsApp/style/games.css
+++ b/Introduction to Javascript/SportsApp/style/games.css
@@ -22,6 +22,10 @@ p{
     align-content: end;
 }
 
+/* #paginationArea{
+    display: flex;
+    justify-content: flex-end;
+} */
 
 @media (min-width: 769px){
 
